removed fixed bottom class from footer so content is not covered

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ div#playa-jandia-map {
 
 .column {
   float: left;
-  width: 10;
+  width: 10%;
 }
 
 .demo {
